src/components/EventDetails/EventDetailsPresenter.scss
@use "../../styles/fonts" as *;
@use "../../styles/countrySelection" as *;
@use "../../styles/form" as *;
@use "../../styles/events.scss" as *;

body {
  padding: 0px !important;
}

.thumbnail-container {
  max-width: 500px; /* Set the maximum width */
  margin: 0 auto; /* Center the container */
  width: 100%; /* Make it responsive */
  overflow: hidden; /* Ensure content doesn't overflow */
  position: relative; /* Position relative for child alignment */
}

.thumbnail {
  width: 100%; /* Ensure it fits the container's width */
  height: 100%; /* Fill the container height */
  object-fit: cover; /* Crop the image if necessary */
}

.eventDetails {
  min-height: 100vh;
  padding: 0px !important;
}

.event-title {
  font-family: $secondaryFont;
  font-size: 20px;
  line-height: 30px;
  color: $GoFlockColor;
  font-weight: 500;
  display: block;
  text-align: center;
  margin-bottom: 15px;
}

.event-details {
  padding: 16px;
  .event-info {
    padding: 0px;
    margin: 0px;
    box-shadow: none;
    .event-dp {
      padding: 0;
      margin: 0 0 16px 0;
      width: 100%;
      height: auto;
      position: relative;
      min-height: 200px;
      background: #fafafa;
      border-radius: 12px;
      ion-img {
        border-radius: 12px;
      }
      .edit-icon {
        position: absolute;
        bottom: 10px;
        right: 10px;
        width: 30px;
        height: 30px;
        border-radius: 50%;
        background: $white;
        display: flex;
        align-items: center;
        justify-content: center;
        ion-img {
          width: 20px;
        }
      }
    }
    .event-brief {
      font-family: $GoFlockFont;
      font-size: 14px;
      line-height: 24px;
      color: $secondaryColor;
      font-weight: 400;
      padding: 0px;
      margin: 0px 0 20px 0;
      display: block;
    }
    .listitems {
      padding: 0px;
      margin: 0px;
      .ion-list {
        list-style-type: none;
        margin: 0 0 5px 0;
        display: flex;
        align-items: center;
        justify-content: space-between;
        --border-color: transparent;
        --padding-start: 0;
        --inner-padding-end: 0;
        .venue-info {
          display: flex;
          align-items: center;
          border: 0px;
          box-shadow: none;
          padding: 0px;
          margin: 0;
          .dp {
            --size: 40px;
          }
          .event-titles {
            padding: 0 0 0 12px;
            .event-title {
              font-family: $GoFlockFont;
              font-size: 12px;
              line-height: 18px;
              padding: 0px;
              margin: 0;
              font-weight: 400;
              color: $secondaryColor;
              display: block;
              text-align: left;
              &.going {
                color: #12b76a;
              }
              &.not-going {
                color: #fc0005;
              }
              &.not-sure {
                color: #f29126;
              }
            }
            .event-subtitle {
              display: block;
              font-style: normal;
              font-family: $GoFlockFont;
              font-size: 12px;
              font-weight: 500;
              line-height: 18px;
              color: $GoFlockColor;
            }
            .event-hostname {
              display: block;
              font-style: normal;
              font-family: $GoFlockFont;
              font-size: 14px;
              font-weight: 500;
              line-height: 18px;
              color: $GoFlockColor;
            }
          }
        }
        .event-type {
          --size: 40px;
          margin-left: auto;
          border: 0;
          ion-img img {
            height: 100%;
          }
        }
        &:nth-last-child(1) {
          margin-bottom: 0px;
        }
      }
    }
  }
  .primary-btn {
    margin-top: 0px;
    margin-bottom: 16px;
  }
}
.invitation-cards {
  padding: 0;
  .ion-row {
    margin: 0 -5px;
  }
}
.rsvp-card {
  border-radius: 16px;
  border: 1px solid #e4e4e7;
  background: #f6f6f6;
  padding: 16px;
  box-shadow: none;
  margin: 0;
  .rsvp-title {
    display: block;
    text-align: center;
    color: $GoFlockColor;
    text-align: center;
    font-family: $GoFlockFont;
    font-size: 16px;
    font-style: normal;
    font-weight: 500;
    line-height: 24px;
    padding: 0;
    margin: 0;
  }
}

.rsvp-actions {
  display: flex;
  background: transparent !important;
  padding-bottom: 0;
  .ionitem {
    width: 100%;
    --border-color: transparent;
    --padding-start: 4px;
    --inner-padding-end: 4px;
    --background: transparent;

    .iontext {
      display: flex;
      align-items: center;
      height: 34px;
      border-radius: 24px;
      justify-content: center;
      width: 100%;
      border: 1px solid #ddd;
      background: $white;
      svg {
        margin-right: 5px;
      }
      &.active {
        color: $white;
        svg path {
          fill: $white;
        }
      }
      &.yes {
        border-color: #12b76a;
        color: #12b76a;
        &.active {
          background: #12b76a;
          color: $white;
        }
      }
      &.no {
        border-color: #fc0005;
        color: #fc0005;
        &.active {
          background: #fc0005;
          color: $white;
        }
      }
      &.notSure {
        border-color: #f29126;
        color: #f29126;
        &.active {
          background: #f29126;
          color: $white;
        }
      }
    }
  }
}

.rsvp-modal {
  position: fixed;
  right: -100%;
  top: 0px;
  width: 100%;
  height: 100vh;
  background: $white;
  transition: all 0.25s ease-in-out;
  z-index: 999;
  &.active {
    right: 0px;
  }
  .rsvp-actions {
    padding: 0 4px;
  }
  // .modal_header {
  //   display: flex;
  //   align-items: center;
  //   box-shadow: none;
  //   height: 50px;
  //   padding: 0 8px;
  //   z-index: 9;
  //   ion-label {
  //     color: $GoFlockColor;
  //     text-align: center;
  //     font-family: $GoFlockFont;
  //     font-size: 14px;
  //     font-style: normal;
  //     font-weight: 500;
  //     line-height: 20px;
  //     width: 100%;
  //   }
  // }
  .guest-section {
    display: flex;
    padding: 0;
    margin: 0;
    position: relative;
    .guest-info {
      width: 100%;
      padding: 0;
      margin: 0;
      box-shadow: none;
      padding: 8px;
      .card-cnt {
        border-radius: 6px;
        border: 1px solid #e4e4e7;
        background: #f6f6f6;
        padding: 24px 0;
        margin: 0;
        display: block;
        text-align: center;
        box-shadow: none;
        ion-thumbnail {
          --size: 80px;
          margin: 0 auto 12px;
        }
        .guest-type {
          font-family: $GoFlockFont;
          font-size: 20px;
          color: $GoFlockColor;
          font-weight: 500;
        }
        .counter-sec {
          box-shadow: none;
          display: flex;
          align-items: center;
          justify-content: center;
          height: 44px;
          border: 1px solid #e4e4e7;
          border-radius: 12px;
          margin: 16px 16px 0;
          .counter-btn {
            padding: 0;
            margin: 0;
            --background: transparent;
            --box-shadow: none;
          }
          .counter-value {
            color: $GoFlockColor;
            text-align: center;
            font-family: $GoFlockFont;
            font-size: 12px;
            font-weight: 500;
          }
        }
      }
    }
    .form-error {
      left: 8px;
      bottom: -10px;
    }
  }
  .guest-form {
    padding: 10px 8px;
    z-index: 99;
    position: relative;
  }
  &.success_modal {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 16px;
  }
}
.profile-dp {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #ddd;
  font-family: $GoFlockFont;
  font-weight: 600;
  font-size: 14px;
  color: $GoFlockColor;
}

.image-preview {
  height: 250px;
}

